# openark-audio

./: ..gitignore.un~  .CMakeLists.txt.un~  .gitignore  .gitignore~  CMakeLists.txt  README.md  a.out  dlib_test.cpp  mytest.cpp  sineosc
RGB-D/: 1.pcd  1_depth.xml  1_pose.xml  2.pcd  2_depth.xml  3.pcd  3_pose.xml  4_depth.xml  4_pose.xml  5.pcd  9.pcd
project/: ..gitignore.un~  .CMakeLists.txt.un~  .pcd_read.cpp.un~  CMakeLists.txt  CMakeLists.txt~  pcd_read.cpp
project/RGB-D/: 0.pcd  1.pcd  10.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd
src/: audioComponent.cpp  audioComponent.h  cmake_install.cmake  crtsine.cpp  dlib_test.cpp  pcd2png.cpp  rtaudio.cpp  stk_realtime.cpp  stk_test.cpp
